--- a/20210423-bootstrap-digipack-shopping cart-1.html
+++ b/20210423-bootstrap-digipack-shopping cart-1.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="./CSS/digipack-shopping cart template.css">
 
+    <link rel="stylesheet" href="./CSS/digipack-shopping cart-1.css">
+
 </head>
 
 <body>
@@ -75,8 +77,6 @@
                 </div>
             </nav>
         </div>
-
-
     </nav>
 
     <main>
@@ -109,8 +109,86 @@
                         </div>
                     </div>
                     <hr class="featurette-divider">
-                    <div class="row no-gutters"></div>
-                    <hr class="featurette-divider">
+                    <!-- 頁面新增區開始 -->
+                    <div class="row no-gutters">
+                        <div class="col-12">
+                            <span style="font-size: 24px; font-weight: 400;">訂單明細</span>
+                        </div>
+                        <div class="col-12 product d-flex flex-row justify-content-between mt-5">
+                            <div class="col-4 d-flex flex-row align-items-center px-0">
+                                <div class="col-2 px-0 mr-1">
+                                    <img class="rounded-circle p-0"
+                                        src="https://items-static.postmates.com/uploads/media/c35c1b1c-f44f-47ea-b183-c47f8190aab9/original.jpg?v=63721019941"
+                                        alt="">
+                                </div>
+                                <div class="col-10 d-flex flex-column">
+                                    <span style="font-size: 16px; font-weight: 500;">Chicken momo</span>
+                                    <small class="num">#41551</small>
+                                </div>
+                            </div>
+                            <div class="col-4 p-0 d-flex justify-content-end align-items-center">
+                                <div class="qty pr-4"><small>-</small>
+                                    <input type="number" placeholder="1" class="text-center mx-2 rounded">
+                                    <small>+</small>
+                                </div>
+
+                                <small class="pr-4">
+                                    $10.50
+                                </small>
+                            </div>
+                        </div>
+                        <hr class="my-4 w-100">
+                        <div class="col-12 product d-flex flex-row justify-content-between">
+                            <div class="col-4 d-flex flex-row align-items-center px-0">
+                                <div class="col-2 px-0 mr-1">
+                                    <img class="rounded-circle p-0"
+                                        src="https://cdn.shopify.com/s/files/1/0266/9841/6315/products/TY_34_300x.jpg?v=1603020281"
+                                        alt="">
+                                </div>
+                                <div class="col-10 d-flex flex-column">
+                                    <span style="font-size: 16px; font-weight: 500;">Spicy Mexican potatoes</span>
+                                    <small class="num">#66999</small>
+                                </div>
+                            </div>
+                            <div class="col-4 p-0 d-flex justify-content-end align-items-center">
+                                <div class="qty pr-4"><small>-</small>
+                                    <input type="number" placeholder="1" class="text-center mx-2 rounded">
+                                    <small>+</small>
+                                </div>
+
+                                <small class="pr-4">
+                                    $10.50
+                                </small>
+                            </div>
+                        </div>
+                        <hr class="my-4 w-100">
+                        <div class="col-12 product d-flex flex-row justify-content-between">
+                            <div class="col-4 d-flex flex-row align-items-center px-0">
+                                <div class="col-2 px-0 mr-1">
+                                    <img class="rounded-circle p-0"
+                                        src="https://images.pexels.com/photos/5591712/pexels-photo-5591712.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+                                        alt="">
+                                </div>
+                                <div class="col-10 d-flex flex-column">
+                                    <span style="font-size: 16px; font-weight: 500;">Breakfast</span>
+                                    <small class="num">#86577</small>
+                                </div>
+                            </div>
+                            <div class="col-4 p-0 d-flex justify-content-end align-items-center">
+                                <div class="qty pr-4"><small>-</small>
+                                    <input type="number" placeholder="1" class="text-center mx-2 rounded">
+                                    <small>+</small>
+                                </div>
+
+                                <small class="pr-4">
+                                    $10.50
+                                </small>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- 頁面新增區結束 -->
+                    <hr class="my-4 w-100">
                     <div class="row no-gutters d-flex flex-column align-content-end">
                         <div class="col-3 d-flex justify-content-between">
                             <span class="text-muted">數量:</span>
@@ -133,8 +211,9 @@
                     <hr class="featurette-divider">
                     <div class="row no-gutters">
                         <div class="col-12 d-flex justify-content-between">
-                            <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物</p>
-                            <a href=""><button type="button" class="btn btn-primary px-5 py-3" >下一步</button></a>
+                            <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物
+                            </p>
+                            <a href=""><button type="button" class="btn btn-primary px-5 py-3">下一步</button></a>
                         </div>
                     </div>
                 </div>
