--- a/20210423-bootstrap-digipack-shopping cart template.html
+++ b/20210423-bootstrap-digipack-shopping cart template.html
@@ -109,23 +109,25 @@
                         </div>
                     </div>
                     <hr class="featurette-divider">
+                     <!-- 頁面新增區開始 -->
                     <div class="row no-gutters"></div>
-                    <hr class="featurette-divider">
+                       <!-- 頁面新增區結束 -->
+                       <hr class="my-4 w-100">
                     <div class="row no-gutters d-flex flex-column align-content-end">
-                        <div class="col-3 d-flex justify-content-between">
+                        <div class="col-3 d-flex justify-content-between align-items-center">
                             <span class="text-muted">數量:</span>
                             <span>3</span>
                         </div>
-                        <div class="col-3 d-flex justify-content-between">
-                            <span class="text-muted">小計:</span>
+                        <div class="col-3 d-flex justify-content-between align-items-center">
+                            <span class="text-muted d-flex col-1 col-md-3 px-0 mr-1">小計:</span>
                             <span>$24.90</span>
                         </div>
-                        <div class="col-3 d-flex justify-content-between">
-                            <span class="text-muted">運費:</span>
+                        <div class="col-3 d-flex justify-content-between align-items-center">
+                            <span class="text-muted d-flex col-1 col-md-3 px-0 mr-1">運費:</span>
                             <span>$24.90</span>
                         </div>
-                        <div class="col-3 d-flex justify-content-between">
-                            <span class="text-muted">總計:</span>
+                        <div class="col-3 d-flex justify-content-between align-items-center">
+                            <span class="text-muted d-flex col-1 col-md-3 px-0 mr-1">總計:</span>
                             <span>$24.90</span>
                         </div>
 
