--- a/20210423-bootstrap-digipack-shopping cart-1.html
+++ b/20210423-bootstrap-digipack-shopping cart-1.html
@@ -77,6 +77,8 @@
                 </div>
             </nav>
         </div>
+
+
     </nav>
 
     <main>
@@ -115,18 +117,18 @@
                             <span style="font-size: 24px; font-weight: 400;">訂單明細</span>
                         </div>
                         <div class="col-12 product d-flex flex-row justify-content-between mt-5">
-                            <div class="col-4 d-flex flex-row align-items-center px-0">
-                                <div class="col-2 px-0 mr-1">
+                            <div class="col-6 col-md-4 d-flex flex-row align-items-center px-0">
+                                <div class="col-4 col-md-2 px-0 mr-1">
                                     <img class="rounded-circle p-0"
                                         src="https://items-static.postmates.com/uploads/media/c35c1b1c-f44f-47ea-b183-c47f8190aab9/original.jpg?v=63721019941"
                                         alt="">
                                 </div>
-                                <div class="col-10 d-flex flex-column">
+                                <div class="col-8 col-md-10 d-flex flex-column">
                                     <span style="font-size: 16px; font-weight: 500;">Chicken momo</span>
                                     <small class="num">#41551</small>
                                 </div>
                             </div>
-                            <div class="col-4 p-0 d-flex justify-content-end align-items-center">
+                            <div class="col-6 col-md-4 p-0 d-flex justify-content-end align-items-center">
                                 <div class="qty pr-4"><small>-</small>
                                     <input type="number" placeholder="1" class="text-center mx-2 rounded">
                                     <small>+</small>
@@ -190,20 +192,20 @@
                     <!-- 頁面新增區結束 -->
                     <hr class="my-4 w-100">
                     <div class="row no-gutters d-flex flex-column align-content-end">
-                        <div class="col-3 d-flex justify-content-between">
+                        <div class="col-3 d-flex justify-content-between align-items-center">
                             <span class="text-muted">數量:</span>
                             <span>3</span>
                         </div>
-                        <div class="col-3 d-flex justify-content-between">
-                            <span class="text-muted">小計:</span>
+                        <div class="col-3 d-flex justify-content-between align-items-center">
+                            <span class="text-muted d-flex col-1 col-md-3 px-0 mr-1">小計:</span>
                             <span>$24.90</span>
                         </div>
-                        <div class="col-3 d-flex justify-content-between">
-                            <span class="text-muted">運費:</span>
+                        <div class="col-3 d-flex justify-content-between align-items-center">
+                            <span class="text-muted d-flex col-1 col-md-3 px-0 mr-1">運費:</span>
                             <span>$24.90</span>
                         </div>
-                        <div class="col-3 d-flex justify-content-between">
-                            <span class="text-muted">總計:</span>
+                        <div class="col-3 d-flex justify-content-between align-items-center">
+                            <span class="text-muted d-flex col-1 col-md-3 px-0 mr-1">總計:</span>
                             <span>$24.90</span>
                         </div>
 
@@ -211,9 +213,8 @@
                     <hr class="featurette-divider">
                     <div class="row no-gutters">
                         <div class="col-12 d-flex justify-content-between">
-                            <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物
-                            </p>
-                            <a href=""><button type="button" class="btn btn-primary px-5 py-3">下一步</button></a>
+                            <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物</p>
+                            <a href=""><button type="button" class="btn btn-primary px-5 py-3" >下一步</button></a>
                         </div>
                     </div>
                 </div>
