--- a/20210423-bootstrap-digipack-shopping cart-1.html
+++ b/20210423-bootstrap-digipack-shopping cart-1.html
@@ -116,18 +116,54 @@
                         <div class="col-12">
                             <span style="font-size: 24px; font-weight: 400;">訂單明細</span>
                         </div>
+                        <!-- product-1 -->
                         <div class="col-12 product d-flex flex-row justify-content-between mt-5">
-                            <div class="col-6 col-md-4 d-flex flex-row align-items-center px-0">
-                                <div class="col-4 col-md-2 px-0 mr-1">
+                            <!-- 產品與數量 -->
+                            <div class="col-6 col-md-5 d-flex flex-row align-items-center px-0">
+                                <!-- 產品 -->
+                                <div class="col-4 col-md-2 px-0">
                                     <img class="rounded-circle p-0"
                                         src="https://items-static.postmates.com/uploads/media/c35c1b1c-f44f-47ea-b183-c47f8190aab9/original.jpg?v=63721019941"
                                         alt="">
                                 </div>
-                                <div class="col-8 col-md-10 d-flex flex-column">
+                                <div class="col-8 ml-2 col-md-10 d-flex flex-column px-0">
                                     <span style="font-size: 16px; font-weight: 500;">Chicken momo</span>
                                     <small class="num">#41551</small>
                                 </div>
+                                <!-- 產品 -->
                             </div>
+                            <!-- 數量 -->
+                            <div class="col-6 col-md-4 p-0 d-flex justify-content-end align-items-center">
+                                <div class="qty pr-4"><small>-</small>
+                                    <input type="number" placeholder="1" class="text-center mx-2 rounded">
+                                    <small>+</small>
+                                </div>
+
+                                <small class="pr-4">
+                                    $10.50
+                                </small>
+                            </div>
+                            
+                        </div>
+                        <!-- product-1 -->
+                        <hr class="my-4 w-100">
+                        <!-- product-2 -->
+                        <div class="col-12 product d-flex flex-row justify-content-between">
+                             <!-- 產品與數量 -->
+                            <div class="col-6 col-md-5 d-flex flex-row align-items-center px-0">
+                                <!-- 產品 -->
+                                <div class="col-4 col-md-2 px-0">
+                                    <img class="rounded-circle p-0"
+                                        src="https://cdn.shopify.com/s/files/1/0266/9841/6315/products/TY_34_300x.jpg?v=1603020281"
+                                        alt="">
+                                </div>
+                                <div class="col-8 ml-2 col-md-10 d-flex flex-column px-0">
+                                    <span style="font-size: 16px; font-weight: 500;">Spicy Mexican potatoes</span>
+                                    <small class="num">#66999</small>
+                                </div>
+                                <!-- 產品 -->
+                            </div>
+                            <!-- 數量 -->
                             <div class="col-6 col-md-4 p-0 d-flex justify-content-end align-items-center">
                                 <div class="qty pr-4"><small>-</small>
                                     <input type="number" placeholder="1" class="text-center mx-2 rounded">
@@ -139,44 +175,26 @@
                                 </small>
                             </div>
                         </div>
+                         <!-- product-2 -->
                         <hr class="my-4 w-100">
+                         <!-- product-3 -->
                         <div class="col-12 product d-flex flex-row justify-content-between">
-                            <div class="col-4 d-flex flex-row align-items-center px-0">
-                                <div class="col-2 px-0 mr-1">
-                                    <img class="rounded-circle p-0"
-                                        src="https://cdn.shopify.com/s/files/1/0266/9841/6315/products/TY_34_300x.jpg?v=1603020281"
-                                        alt="">
-                                </div>
-                                <div class="col-10 d-flex flex-column">
-                                    <span style="font-size: 16px; font-weight: 500;">Spicy Mexican potatoes</span>
-                                    <small class="num">#66999</small>
-                                </div>
-                            </div>
-                            <div class="col-4 p-0 d-flex justify-content-end align-items-center">
-                                <div class="qty pr-4"><small>-</small>
-                                    <input type="number" placeholder="1" class="text-center mx-2 rounded">
-                                    <small>+</small>
-                                </div>
-
-                                <small class="pr-4">
-                                    $10.50
-                                </small>
-                            </div>
-                        </div>
-                        <hr class="my-4 w-100">
-                        <div class="col-12 product d-flex flex-row justify-content-between">
-                            <div class="col-4 d-flex flex-row align-items-center px-0">
-                                <div class="col-2 px-0 mr-1">
+                            <!-- 產品與數量 -->
+                            <div class="col-6 col-md-5 d-flex flex-row align-items-center px-0">
+                                <!-- 產品 -->
+                                <div class="col-4 col-md-2 px-0">
                                     <img class="rounded-circle p-0"
                                         src="https://images.pexels.com/photos/5591712/pexels-photo-5591712.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                         alt="">
                                 </div>
-                                <div class="col-10 d-flex flex-column">
+                                <div class="col-8 ml-2 col-md-10 d-flex flex-column px-0">
                                     <span style="font-size: 16px; font-weight: 500;">Breakfast</span>
                                     <small class="num">#86577</small>
                                 </div>
+                                <!-- 產品 -->
                             </div>
-                            <div class="col-4 p-0 d-flex justify-content-end align-items-center">
+                            <!-- 數量 -->
+                            <div class="col-6 col-md-4 p-0 d-flex justify-content-end align-items-center">
                                 <div class="qty pr-4"><small>-</small>
                                     <input type="number" placeholder="1" class="text-center mx-2 rounded">
                                     <small>+</small>
@@ -187,7 +205,7 @@
                                 </small>
                             </div>
                         </div>
-
+                        <!-- product-3 -->
                     </div>
                     <!-- 頁面新增區結束 -->
                     <hr class="my-4 w-100">
