--- a/bootstrap-digipack-index.html
+++ b/bootstrap-digipack-index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="./CSS/20210423-bootstrap-digipack-template.css">
+    <link rel="stylesheet" href="./CSS/digipack-template.css">
     <link rel="stylesheet" href="./CSS/digipack-index.css">
 
 </head>
